<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickButtonLista"
            android:text="@string/botao_listar_personagens" />

        <Button
            android:id="@+id/buttonFechar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickBotaoFechar"
            android:text="@string/botao_fechar" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_desc"
            app:srcCompat="@drawable/epicseven" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>